--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100"
+    >
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
@@ -85,19 +87,92 @@
         <div class="row h-100">
           <div class="col-md-6 hero-tagline my-auto">
             <h1>Membantu Temukan Rumah Impian.</h1>
-            <p><span class="fw-bold">Rumah Impian</span>
-               hadir untuk temukan rumah terbaik untukmu, untuk di
-              jual ataupun di sewa dengan sumber terpercaya.
+            <p>
+              <span class="fw-bold">Rumah Impian</span>
+              hadir untuk temukan rumah terbaik untukmu, untuk di jual ataupun
+              di sewa dengan sumber terpercaya.
             </p>
             <button class="button-lg-primary">Temukan Rumah</button>
             <a href="#">
-              <img src="/assets/img/Arrrow.png" alt="">
+              <img src="/assets/img/Arrrow.png" alt="" />
             </a>
           </div>
         </div>
 
-        <img src="/assets/img/Herobanner.png" alt="" class="position-absolute end-0 bottom-0 img-hero">
-        <img src="/assets/img/Accent.png" alt="" class="accent-img position-absolute h-100 top-0 start-0">
+        <img
+          src="/assets/img/Herobanner.png"
+          alt=""
+          class="position-absolute end-0 bottom-0 img-hero"
+        />
+        <img
+          src="/assets/img/Accent.png"
+          alt=""
+          class="accent-img position-absolute h-100 top-0 start-0"
+        />
+      </div>
+    </section>
+
+    <!-- Layanan Section -->
+    <section id="layanan">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2>Layanan Kami</h2>
+            <span class="sub-title"
+              >Rumah impian hadir menjadi solusi bagi kamu</span
+            >
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-4 text-center">
+            <div class="card-layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img
+                  src="/assets/img/house.png"
+                  alt=""
+                  class="position-absolute top-50 start-50 translate-middle"
+                />
+              </div>
+              <h3 class="mt-4">Property Baru</h3>
+              <p class="mt-3">
+                Rumah impian kini jadi kenyataan, Beli rumah bary dengan
+                fasilitas terbaik dengan lingkungan yang nyaman.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div class="card-layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img
+                  src="/assets/img/sewa.png"
+                  alt=""
+                  class="position-absolute top-50 start-50 translate-middle"
+                />
+              </div>
+              <h3 class="mt-4">Sewa Rumah</h3>
+              <p class="mt-3">
+                Sewa rumah yang indah untuk keluarga anda, pilihan terbaik untuk
+                tempat tinggal keluarga mu.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div class="card-layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img
+                  src="/assets/img/beli.png"
+                  alt=""
+                  class="position-absolute top-50 start-50 translate-middle"
+                />
+              </div>
+              <h3 class="mt-4">Beli Rumah</h3>
+              <p class="mt-3">
+                Beli Rumah sempurna dengan harga terbaik kualitas terjamin dari
+                sumber terpercaya.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
