--- a/index.html
+++ b/index.html
@@ -319,6 +319,157 @@
       
     </section>
 
+    <!-- Recomendation Section -->
+    <section class="rekomendasi">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-12 text-center">
+            <h2>Rekomendasi Rumah Untuk Mu</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 mb-4">
+            <div class="card p-2" style="width: 22rem;">
+              <img src="/assets/img/rumah1.png" alt="">
+              <div class="card-body">
+                <h4>IDR.200.000.000</h4>
+                <p class="mb-4 lh-sm">Jl. Soekarno Hatta No.1 <br> <span class="text-danger">Sewa</span></p>
+              </div>
+              <div class="card-fasilitas d-flex justify-content-between px-4">
+                <span>
+                  <img src="assets/img/bed.png" alt=""> 3
+                  <p>Kamar Tidur</p>
+                </span>
+                <span>
+                  <img src="assets/img/bath.png" alt=""> 4
+                  <p>Kamar Mandi</p>
+                </span>
+                <span>
+                  <img src="assets/img/globe.png" alt=""> 360m
+                  <p>Luas Rumah</p>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
