--- a/index.html
+++ b/index.html
@@ -589,6 +589,86 @@
       </div>
     </section>
 
+    <!-- Contact Section -->
+    <section id="contact">
+      <div class="container-fluid overlay h-100">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h3>
+                Butuh Konsultasi..? Silahkan kontak kami Kami Siap Membantu
+              </h3>
+              <div class="kontak">
+                <h6>Kontak</h6>
+                <div class="mb-3 d-flex align-items-center">
+                  <div>
+                    <img src="/assets/img/alamat.png" alt="" />
+                  </div>
+                  <a href="#"
+                    >Jl. Pelajar Pejuang 123 Majalaya Bandung Indonesia</a
+                  >
+                </div>
+                <div class="mb-3">
+                  <img src="/assets/img/telp.png" alt="" />
+                  <a href="#">022-6545-2041</a>
+                </div>
+                <div class="mb-3">
+                  <img src="/assets/img/email.png" alt="" />
+                  <a href="#">rumahimpian@gmail.com</a>
+                </div>
+              </div>
+              <h6>Social Media</h6>
+                <a href="#" class="me-3"><img src="/assets/img/facebook.png" alt="facebook" /> </a>
+                <a href="#" class="me-3"><img src="/assets/img/twitter.png" alt="twitter"></a>
+                <a href="#" class="me-3"><img src="/assets/img/instagram.png" alt="instagram"></a>
+                <a href="#" class="linkrumah">Rumah Impian</a>
+            </div>
+            <div class="col-md-6">
+              <div class="card-contact w-100">
+                <form>
+                  <h2>ada pertanyaan..?</h2>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput1" placeholder="Masukan email anda disini...">
+                    <label for="floatingInput" class="d-flex align-items-center">Masukan email anda disini...</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput2" placeholder="Pertanyaan Anda..">
+                    <label for="floatingInput" class="d-flex align-items-center">Pertanyaan Anda..</label>
+                  </div>
+                  <button class="button-contact" type="submit">Kirim</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="d-flex align-items-center position-relative">
+      <div class="container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7 d align-items-center">
+              <img src="/assets/img/logo.png" alt="logosmall">
+              <a href="#" class="ms-3">Rumah Impian</a>
+            </div>
+            <div class="col-md-5 d-flex justify-content-evenly">
+              <a href="#hero">Beranda</a>
+              <a href="#layanan">Layanan</a>
+              <a href="#fitur">Fitur</a>
+              <a href="#contact">Kontak</a>
+            </div>
+            <div class="row position-absolute copyright start-50 translate-middle">
+              <div class="col-12">
+                <p>Copyright bg Creative Academy All Right Reserved.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
